# mitutu

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mitutu/: __init__.py
src/mitutu/data/: sets.py
src/mitutu/features/: dates.py  eda.py
src/mitutu/models/: null.py  performance.py
tests/: test_mitutu.py
tests/data/: test_sets.py
