[tool.poetry]
name = "mitutu"
version = "2025.0.1.12"
description = "A random collection of code I use day to day :)"
authors = ["Mitali Balki"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "2.2.2"
scikit-learn = "1.5.1"
matplotlib = "3.10.5"
seaborn = "0.13.2"
numpy = "2.3.2"
joblib = "1.4.2"
imbalanced-learn = ">=0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
